tests/negative/gold/deprecated_first_segment_test.gold
tests/negative/deprecated_first_segment_test.toit:3:8: warning: Deprecated first-segment prefix
import encoding.json
       ^~~~~~~~
tests/negative/deprecated_first_segment_test.toit:7:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
